# biopayload

./: CMakeLists.txt  Colormap.txt  Image Processing.py  package.xml  setup.py
Camera_External_control/Filters/: colorCheck.py
Camera_External_control/RcControl/Source/c#/: RcControl.sln
Camera_External_control/RcControl/Source/c#/RcControl/: Form1.resx  Program.cs
Camera_External_control/RcControl/Source/c#/RcControl/Constants/: RcCommands.cs
NDVI/: Image Processing.py
Reference Code/Camera_External_control/Filters/: colorCheck.py
biopayload/: Camera.py  CytronMotorHat.py  DigitalStepperDriver.py  RaspiGpio.py  biopayload_controller.py  interfaces.py  setup.cfg
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/beginner_tutorials/: add_two_ints_client.py  add_two_ints_server.py  listener.py  talker.py
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  biopayload.pc
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
catkin_ws/devel/share/biopayload/cmake/: biopayloadConfig.cmake
catkin_ws/src/beginner_tutorials/: CMakeLists.txt
catkin_ws/src/biopayload/: CMakeLists.txt  package.xml
catkin_ws/src/biopayload/CameraWebServer/: CameraWebServer.ino
catkin_ws/src/biopayload/Camera_External_control/RcControl/: Form1.cs
catkin_ws/src/biopayload/scripts/: biopayload_controller
scripts/: biopayload_controller  biopayload_controller.py
src/Raspi_MotorHAT_python3/: Raspi_MotorHAT.py
(+43 files in other folders)
